2018-03-29 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-1004

	* src/rte.[cc,h] (get_stepwise_scattersky_source):
	New version applying unified phase matrix extraction scheme. Old version
	for now moved into get_stepwise_scattersky_source_old.
	New version calculates scattered field in prop direction directly,
	instead of by linear interpolation of fields for two propagation polar
	angles included in the input field as required by the old, DOIT-type
	pha_mat extraction method.
	This changes test results by up to 0.1K, but should be the more accurate
	solution.

	* src/m_fos.cc, methods.cc (iyHybrid):
	Adapt interface to new get_stepwise_scattersky_source. Allow user to select
	temperature interpolation order.

	* src/m_cloudradar.cc (iyActiveSingleScat):
	Bugfix. Consider case with multiple freq in f_grid, but only single freq
	in scat_data.

	* controlfiles/artscomponents/hybridscat/yREFERENCE.xml:
	New reference results reflecting changes in get_stepwise_scattersky_source.

2018-03-29  Richard Larsson <ric.larsson@gmail.com>

	* arts-2-3-1003
	
	* 3rdparty/relmat/arts_interface.F90:  Fix bug in relative 
	temperatures.  Made the outputs of population densities and
	reduced dipole behave as expected for both methods.
	
	* src/CMakeLists.txt:  Added a species_info.{cc,h} because
	I tend to need so many small things that are practically
	constants for molecules, so it helps to put these in
	clear files for overview
	
	* src/species_info.{cc,h}:  Contains some Zeeman constants
	and some reduced dipole computations required to find the
	sign of a dipole.  Only tested for CO2
	
	* src/zeeman.{cc,h}: moved some constants
	
	* src/m_linemixing.cc:  Changed so the full inversions
	are performed when the order of line mixing is negative.
	Also performs ordered line mixing when pressure is below
	lm_p_lim to speed these up a bit.  Also added two control
	parameters to the input of the function with reasonable 
	limits.  These changes are mostly tested but I will only